<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_medicines"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_medicines" />
    <item
        android:id="@+id/nav_history"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/nav_history" />
    <item
        android:id="@+id/nav_adherence"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/nav_adherence" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />
</menu>
