<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical" android:background="@color/background"
    android:padding="@dimen/screen_margin">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/history_title" style="@style/TextStyle.Heading1"/>
    <com.google.android.material.chip.ChipGroup android:id="@+id/chipGroup"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md" app:singleSelection="true"
        app:selectionRequired="true">
        <com.google.android.material.chip.Chip android:id="@+id/chipToday" style="@style/Widget.SmartMed.Chip"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/today" android:checked="true"/>
        <com.google.android.material.chip.Chip android:id="@+id/chipWeek" style="@style/Widget.SmartMed.Chip"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/this_week"/>
        <com.google.android.material.chip.Chip android:id="@+id/chipMonth" style="@style/Widget.SmartMed.Chip"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/this_month"/>
    </com.google.android.material.chip.ChipGroup>
    <ProgressBar android:id="@+id/progressBar" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_gravity="center" android:visibility="gone"
        android:layout_marginTop="@dimen/spacing_lg"/>
    <TextView android:id="@+id/tvEmpty" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/no_history" android:visibility="gone" style="@style/TextStyle.BodySecondary"
        android:layout_gravity="center" android:layout_marginTop="@dimen/spacing_xxl"/>
    <androidx.recyclerview.widget.RecyclerView android:id="@+id/rvHistory"
        android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1"
        android:layout_marginTop="@dimen/spacing_md" android:clipToPadding="false"/>
</LinearLayout>
