<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/background">
    <TextView android:id="@+id/tvTitle" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_margin" android:layout_marginTop="@dimen/spacing_lg"
        android:text="@string/nav_medicines" style="@style/TextStyle.Heading1"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
    <ProgressBar android:id="@+id/progressBar" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:visibility="gone" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView android:id="@+id/tvEmpty" android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/no_medicines" android:visibility="gone" style="@style/TextStyle.BodySecondary"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView android:id="@+id/rvMedicines"
        android:layout_width="0dp" android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_md" android:padding="@dimen/spacing_sm"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton android:id="@+id/fabAdd"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin" android:src="@android:drawable/ic_input_add"
        android:contentDescription="@string/add_medicine" app:tint="@color/on_primary"
        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
